// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders correctly 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(5,1fr);
  grid-gap: 16px;
}

@media (max-width:48em) {
  .c0 {
    grid-template-columns: repeat(2,1fr);
    grid-gap: 8px;
  }
}

<div
  className="c0"
>
  Grid
</div>
`;

exports[`Grid renders correctly with 12 columns 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 16px;
}

@media (max-width:48em) {
  .c0 {
    grid-template-columns: repeat(2,1fr);
    grid-gap: 8px;
  }
}

<div
  className="c0"
>
  Grid
</div>
`;
